# cpp-design-patterns

./: README.md
accounting-transaction/: CMakeLists.txt  account.cc  account.h  accounting_main.cc  entry.cc  entry.h  transaction.cc  transaction.h
accounting-transaction/tests/: CMakeLists.txt  transaction_test.cc
state/: CMakeLists.txt  gumballs_machine.cc  gumballs_machine.h  gumballs_machine_main.cc  has_coin_state.cc  has_coin_state.h  no_coin_state.cc  no_coin_state.h  state.cc  state.h  winner_state.cc  winner_state.h
state-room-booking/: CMakeLists.txt  accomodation_type.cc  accomodation_type.h  auto_id.h  current_lodging_state.cc  current_lodging_state.h  finished_lodging_state.cc  finished_lodging_state.h  guest.cc  guest.h  hosting.cc  hosting.h  hosting_main.cc  hosting_state.cc  hosting_state.h  hotel_bundle.cc  hotel_bundle.h  reservation_state.cc  reservation_state.h  room.cc  room.h
